src/test/ui/type/ascription/issue-54516.stderr
error: casts cannot be followed by a function call
  --> $DIR/issue-54516.rs:5:20
   |
LL |     println!("{}", std::mem:size_of::<BTreeMap<u32, u32>>());
   |                    ^^^^^^^^-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                            |
   |                            help: maybe write a path separator here: `::`
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`

error: aborting due to previous error

